Agregado de mat error y arreglo en auth

--- a/src/app/components/account/change-password/change-password.component.html
+++ b/src/app/components/account/change-password/change-password.component.html
@@ -12,6 +12,7 @@
                         [attr.aria-pressed]="hide1">
                         <mat-icon>{{hide1 ? 'visibility_off' : 'visibility'}}</mat-icon>
                     </button>
+                    <mat-error *ngIf="passwordForm.controls['oldPassword'].hasError('required')">Este campo es <strong>requerido</strong></mat-error>
                 </mat-form-field>
             </div>
 
@@ -27,6 +28,8 @@
                         *ngIf="passwordForm.get('newPassword')?.hasError('minlength') || passwordForm.get('confirmPassword')?.hasError('minlength')">
                         Las contraseñas deben tener al menos 10 caracteres.
                     </mat-error>
+                    <mat-error *ngIf="passwordForm.controls['newPassword'].hasError('required')">Este campo es <strong>requerido</strong></mat-error>
+
                 </mat-form-field>
             </div>
 
@@ -36,7 +39,9 @@
                   <input matInput [type]="hide3 ? 'password' : 'text'" formControlName="confirmPassword"  required>
                   <button mat-icon-button matSuffix (click)="hide3 = !hide3" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide3">
                     <mat-icon>{{hide3 ? 'visibility_off' : 'visibility'}}</mat-icon>
-                  </button>                
+                  </button>          
+                  <mat-error *ngIf="passwordForm.controls['confirmPassword'].hasError('required')">Este campo es <strong>requerido</strong></mat-error>
+      
                 </mat-form-field>
               </div>              
               
