--- a/src/app/components/user/user-list/user-list.component.html
+++ b/src/app/components/user/user-list/user-list.component.html
@@ -75,8 +75,9 @@
 
       <mat-action-list>
         <button mat-raised-button color="accent" (click)="saveChanges()" class="mr-2">Guardar</button>
-        <button mat-raised-button (click)="cancelUpdate()">Cancelar</button>
+        <button mat-raised-button (click)="cancelUpdate()">Volver</button>
       </mat-action-list>
+      
     </div>
   </mat-card-content>
 
