--- a/src/app/components/appointment/list-appointment/list-appointment.component.html
+++ b/src/app/components/appointment/list-appointment/list-appointment.component.html
@@ -3,7 +3,7 @@
   <mat-card-content>
     <mat-card-title>Agenda</mat-card-title><br>
     <mat-form-field>
-      <input matInput [matDatepicker]="datepicker" [value]="date.value" (dateChange)="onDateChange($event)" [matDatepickerFilter]="esHabilitado">
+      <input matInput [matDatepicker]="datepicker" [value]="date.value" (dateChange)="onDateChange($event)" >
 
       <mat-datepicker-toggle matSuffix [for]="datepicker" ></mat-datepicker-toggle>
       <mat-datepicker #datepicker ></mat-datepicker>
@@ -76,7 +76,7 @@
 
         <!-- schedule Column -->
         <ng-container matColumnDef="actions">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>actions</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Acciones</th>
           <td mat-cell *matCellDef="let row">  
             <button mat-mini-fab matTooltip="Warn" color="warn" aria-label="Example mini fab with a heart icon"  (click)="eliminarTurno(row.id)" >
               <mat-icon>delete</mat-icon>
