--- a/src/app/components/account/change-password/change-password.component.html
+++ b/src/app/components/account/change-password/change-password.component.html
@@ -7,7 +7,7 @@
             <div class="row">
                 <mat-form-field>
                     <mat-label>Contraseña Antigua</mat-label>
-                    <input matInput [type]="hide1 ? 'password' : 'text'" formControlName="oldPassword" required>
+                    <input matInput [type]="hide1 ? 'password' : 'text'" formControlName="oldPassword" required autocomplete="current-password">
                     <button mat-icon-button matSuffix (click)="hide1 = !hide1" [attr.aria-label]="'Hide password'"
                         [attr.aria-pressed]="hide1">
                         <mat-icon>{{hide1 ? 'visibility_off' : 'visibility'}}</mat-icon>
@@ -19,7 +19,7 @@
             <div class="row">
                 <mat-form-field>
                     <mat-label>Nueva Contraseña</mat-label>
-                    <input matInput [type]="hide2 ? 'password' : 'text'" formControlName="newPassword" required>
+                    <input matInput [type]="hide2 ? 'password' : 'text'" formControlName="newPassword" required autocomplete="new-password">
                     <button mat-icon-button matSuffix (click)="hide2 = !hide2" [attr.aria-label]="'Hide password'"
                         [attr.aria-pressed]="hide2">
                         <mat-icon>{{hide2 ? 'visibility_off' : 'visibility'}}</mat-icon>
@@ -36,7 +36,7 @@
             <div class="row">
                 <mat-form-field>
                   <mat-label>Confirmar Nueva Contraseña</mat-label>
-                  <input matInput [type]="hide3 ? 'password' : 'text'" formControlName="confirmPassword"  required>
+                  <input matInput [type]="hide3 ? 'password' : 'text'" formControlName="confirmPassword"  required autocomplete="new-password">
                   <button mat-icon-button matSuffix (click)="hide3 = !hide3" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide3">
                     <mat-icon>{{hide3 ? 'visibility_off' : 'visibility'}}</mat-icon>
                   </button>          
