--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -18,7 +18,7 @@
         <mat-form-field class="full-width">
           <mat-label>Contraseña</mat-label>
           <input matInput [type]="hide3 ? 'password' : 'text'" formControlName="password"
-            required>
+            required autocomplete="off">
             <button type="button" mat-icon-button matSuffix (click)="hide3 = !hide3" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide3">
               <mat-icon>{{hide3 ? 'visibility_off' : 'visibility'}}</mat-icon>
             </button>
@@ -39,3 +39,4 @@
 
   </mat-card-content>
 </mat-card>
+
