--- a/src/app/components/appointment/cancel-appointments/cancel-appointments.component.html
+++ b/src/app/components/appointment/cancel-appointments/cancel-appointments.component.html
@@ -29,7 +29,7 @@
 
       <mat-card-actions>
         <button mat-raised-button color="accent" type="submit" class="mr-2">Guardar</button>
-        <button mat-raised-button color="accent" type="button" (click)="deleteBlockedDay()">Limpiar</button>
+        <button mat-raised-button color="accent" type="button">Limpiar</button>
       </mat-card-actions>
     </form>
   </mat-card-content>
