--- a/src/app/components/user/user-list/user-list.component.html
+++ b/src/app/components/user/user-list/user-list.component.html
@@ -9,7 +9,7 @@
     </mat-card-header>
     <mat-list>
       <mat-list-item *ngFor="let user of users">
-        {{ user.nombre }} {{ user.apellido }}
+        {{ user.first_name }} {{ user.last_name }}
         <button mat-mini-fab color="accent" (click)="updateUser(user)" class="btn-actualizar"><i class="fa fa-search" aria-hidden="true"></i></button>
         <!-- <button mat-mini-fab color="warn" (click)="deleteUser(user.id)" aria-label="Eliminar usuario"
           class="btn-eliminar"><i class="fa-solid fa-trash"></i></button> -->
@@ -27,28 +27,28 @@
       <div class="row">        
         <mat-form-field class="full-width">
           <mat-label>Nombre</mat-label>
-          <input matInput [(ngModel)]="selectedUser.nombre" readonly >
+          <input matInput [(ngModel)]="selectedUser.first_name" readonly >
         </mat-form-field>
       </div>
 
       <div class="row">        
         <mat-form-field class="full-width">
           <mat-label>Apellido</mat-label>
-          <input matInput [(ngModel)]="selectedUser.apellido" readonly>
+          <input matInput [(ngModel)]="selectedUser.last_name" readonly>
         </mat-form-field>
       </div>
 
       <div class="row">
         <mat-form-field class="full-width">
           <mat-label>Dirección</mat-label>
-          <input matInput [(ngModel)]="selectedUser.direccion" readonly >
+          <input matInput [(ngModel)]="selectedUser.address" readonly >
         </mat-form-field>
       </div>
 
       <div class="row">
         <mat-form-field class="full-width">
           <mat-label>Telefono</mat-label>
-          <input matInput  [(ngModel)]="selectedUser.telefono" readonly>
+          <input matInput  [(ngModel)]="selectedUser.phone" readonly>
         </mat-form-field>
       </div>      
 
@@ -75,6 +75,7 @@
 
       <mat-action-list>
         <button mat-raised-button color="accent" (click)="saveChanges()" class="mr-2">Guardar</button>
+        <button mat-raised-button color="warn" (click)="deleteUser(selectedUser.id)" class="mr-2">Eliminar</button>
         <button mat-raised-button (click)="cancelUpdate()">Volver</button>
       </mat-action-list>
       
