--- a/src/app/components/account/profile/profile.component.html
+++ b/src/app/components/account/profile/profile.component.html
@@ -10,8 +10,8 @@
       <div class="row">
         <mat-form-field class="full-width">
           <mat-label>Nombre</mat-label>
-          <input matInput formControlName="nombre" (keydown)="formValidator.onKeyDown($event)">
-          <mat-error *ngIf="!formularioEnviadoExitoso && addressForm.controls['nombre'].hasError('required')">
+          <input matInput formControlName="first_name" (keydown)="formValidator.onKeyDown($event)">
+          <mat-error *ngIf="!formularioEnviadoExitoso && addressForm.controls['first_name'].hasError('required')">
             Nombre es <strong>requerido</strong>
           </mat-error>
         </mat-form-field>
@@ -20,8 +20,8 @@
       <div class="row">
         <mat-form-field class="full-width"> 
           <mat-label>Apellido</mat-label>
-          <input matInput formControlName="apellido" (keydown)="formValidator.onKeyDown($event)">
-          <mat-error *ngIf="!formularioEnviadoExitoso && addressForm.controls['apellido'].hasError('required')">
+          <input matInput formControlName="last_name" (keydown)="formValidator.onKeyDown($event)">
+          <mat-error *ngIf="!formularioEnviadoExitoso && addressForm.controls['last_name'].hasError('required')">
             Apellido es <strong>requerido</strong>
           </mat-error>
         </mat-form-field>
@@ -30,8 +30,8 @@
       <div class="row">
         <mat-form-field class="full-width"> 
           <mat-label>Dirección</mat-label>
-          <input matInput formControlName="direccion" (keydown)="formValidator.allowAlphanumeric($event)">
-          <mat-error *ngIf="!formularioEnviadoExitoso && addressForm.controls['direccion'].hasError('required')">
+          <input matInput formControlName="address" (keydown)="formValidator.allowAlphanumeric($event)">
+          <mat-error *ngIf="!formularioEnviadoExitoso && addressForm.controls['address'].hasError('required')">
             Dirección es <strong>requerido</strong>
           </mat-error>
         </mat-form-field>
@@ -40,11 +40,11 @@
       <div class="row">
         <mat-form-field class="full-width">
           <mat-label>Teléfono</mat-label>
-          <input matInput type="number" formControlName="telefono" (keydown)="formValidator.onlyNumbers($event)">
-          <mat-error *ngIf="!formularioEnviadoExitoso && addressForm.controls['telefono'].hasError('required')">
+          <input matInput type="number" formControlName="phone" (keydown)="formValidator.onlyNumbers($event)">
+          <mat-error *ngIf="!formularioEnviadoExitoso && addressForm.controls['phone'].hasError('required')">
             Teléfono es <strong>requerido</strong>
           </mat-error>
-          <mat-error *ngIf="!formularioEnviadoExitoso && (addressForm.controls['telefono'].hasError('minlength') || addressForm.controls['telefono'].hasError('maxlength'))">
+          <mat-error *ngIf="!formularioEnviadoExitoso && (addressForm.controls['phone'].hasError('minlength') || addressForm.controls['phone'].hasError('maxlength'))">
             Teléfono es <strong>inválido</strong>
           </mat-error>          
         </mat-form-field>
