--- a/src/app/components/appointment/list-appointment/list-appointment.component.html
+++ b/src/app/components/appointment/list-appointment/list-appointment.component.html
@@ -37,14 +37,14 @@
 
         <!-- first_name Column -->
         <ng-container matColumnDef="first_name">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Nombre</th>
-          <td mat-cell *matCellDef="let row">{{row.first_name}}</td>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Cliente</th>
+          <td mat-cell *matCellDef="let row">{{row.first_name}} {{row.last_name}}</td>
         </ng-container>
         <!-- last_name Column -->
-        <ng-container matColumnDef="last_name">
+      <!--   <ng-container matColumnDef="last_name">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Apellido</th>
           <td mat-cell *matCellDef="let row">{{row.last_name}}</td>
-        </ng-container>
+        </ng-container> -->
         <!-- email Column -->
         <ng-container matColumnDef="email">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Email</th>
@@ -75,14 +75,19 @@
         </ng-container>
 
         <!-- schedule Column -->
-        <!-- <ng-container matColumnDef="actions">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Acciones</th>
+        <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
           <td mat-cell *matCellDef="let row">  
-            <button mat-mini-fab matTooltip="Warn" color="warn" aria-label="Example mini fab with a heart icon"  (click)="eliminarTurno(row.id)" >
+            <button mat-mini-fab matTooltip="Warn" color="warn" aria-label="Example mini fab with a heart icon"  (click)="clientAbsense(row.id)" >
+              <mat-icon>close</mat-icon>
+            </button>
+            <button mat-mini-fab matTooltip="Warn" color="warn" aria-label="Example mini fab with a heart icon"  (click)="cancelAppointment(row.id)" >
               <mat-icon>delete</mat-icon>
             </button>
+            
           </td>
-        </ng-container> -->
+          
+        </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
