--- a/src/app/components/dashboard-navigation/dashboard-navigation.component.html
+++ b/src/app/components/dashboard-navigation/dashboard-navigation.component.html
@@ -4,29 +4,21 @@
     <mat-toolbar>Menu</mat-toolbar>
 
     <button mat-menu-item [matMenuTriggerFor]="menu">
-      <mat-icon>person</mat-icon>Turnos
+      <mat-icon>calendar_month</mat-icon>Turnos
     </button>
     <mat-menu #menu="matMenu">
       <button mat-menu-item routerLink="/dashboard/create-appointment">
-        <mat-icon>person</mat-icon>Crear Turno
+        <mat-icon>event_available</mat-icon>Crear Turno
       </button>
       <button mat-menu-item routerLink="/dashboard/list-appointment">
         <mat-icon>list</mat-icon>Listar Turnos
-      </button>
-      
-    </mat-menu>
+      </button>      
+    </mat-menu>    
 
-    <button mat-menu-item [matMenuTriggerFor]="menu2" *ngIf="userRole === 'admin'" >
-      <mat-icon>group</mat-icon>Usuarios
+    <button mat-menu-item class="menu-button" routerLink="/dashboard/list-clients">
+      <mat-icon>person</mat-icon>
+      <span>Clientes</span>
     </button>
-    <mat-menu #menu2="matMenu" >
-      <button mat-menu-item routerLink="/dashboard/list-users">
-        <mat-icon>manage_accounts</mat-icon>Administrar Cuentas <!-- EN ESTA PARTE SOLO DEBEN ACCEDER LOS ADMIN -->
-      </button>
-      <button mat-menu-item routerLink="/dashboard/create-user">
-        <mat-icon>person_add</mat-icon>Crear Usuario
-      </button>
-    </mat-menu>
 
     <button mat-menu-item class="menu-button" routerLink="/dashboard/schedule">
       <mat-icon>schedule</mat-icon>
@@ -36,6 +28,18 @@
     <button mat-menu-item routerLink="/dashboard/calendar">
       <mat-icon>calendar_month</mat-icon>Calendario
     </button>
+
+    <button mat-menu-item [matMenuTriggerFor]="menu2" *ngIf="userRole === 'admin'" >
+      <mat-icon>engineering</mat-icon>Usuarios
+    </button>
+    <mat-menu #menu2="matMenu" >
+      <button mat-menu-item routerLink="/dashboard/list-users">
+        <mat-icon>manage_accounts</mat-icon>Administrar Cuentas <!-- EN ESTA PARTE SOLO DEBEN ACCEDER LOS ADMIN -->
+      </button>
+      <button mat-menu-item routerLink="/dashboard/create-user">
+        <mat-icon>person_add</mat-icon>Crear Usuario
+      </button>
+    </mat-menu>
 
     <button mat-menu-item class="menu-button" routerLink="/dashboard/change-password">
       <mat-icon>lock</mat-icon>
