--- a/src/app/components/appointment/list-appointment/list-appointment.component.html
+++ b/src/app/components/appointment/list-appointment/list-appointment.component.html
@@ -3,13 +3,22 @@
   <mat-card-content>
     <mat-card-title>Agenda</mat-card-title><br>
     <mat-form-field>
+      <mat-label>Selecciona una fecha</mat-label>
       <input matInput [matDatepicker]="datepicker" [value]="date.value" (dateChange)="onDateChange($event)" >
-
       <mat-datepicker-toggle matSuffix [for]="datepicker" ></mat-datepicker-toggle>
       <mat-datepicker #datepicker ></mat-datepicker>
-
     </mat-form-field>
     
+<!-- 
+    <mat-card-content>
+      <mat-form-field appearance="outline" class="date-picker">
+        
+        <input matInput [matDatepicker]="datepicker" [value]="date.value" (dateChange)="onDateChange($event)">
+        <mat-datepicker-toggle matSuffix [for]="datepicker"></mat-datepicker-toggle>
+        <mat-datepicker #datepicker></mat-datepicker>
+      </mat-form-field>
+    </mat-card-content> -->
+
     
   </mat-card-content>
   <mat-card-content>
@@ -78,13 +87,24 @@
         <ng-container matColumnDef="actions">
           <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
           <td mat-cell *matCellDef="let row">  
-            <button mat-mini-fab matTooltip="Warn" color="warn" aria-label="Example mini fab with a heart icon"  (click)="clientAbsense(row.id)" >
-              <mat-icon>close</mat-icon>
+            <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+              <mat-icon>more_vert</mat-icon>
             </button>
-            <button mat-mini-fab matTooltip="Warn" color="warn" aria-label="Example mini fab with a heart icon"  (click)="cancelAppointment(row.id)" >
-              <mat-icon>delete</mat-icon>
-            </button>
-            
+            <mat-menu #menu="matMenu">
+              <button mat-menu-item (click)="clientAbsense(row.id)">
+                <mat-icon>person_alert</mat-icon>
+                <span>Ausente</span>
+              </button>
+              <button mat-menu-item (click)="cancelAppointment(row.id)">
+                <mat-icon>cancel</mat-icon>
+                <span>Cancelar</span>
+              </button>
+              <button mat-menu-item (click)="blockClient(row.client_id, row.email, row.phone_number, row.id )">
+                <mat-icon>block</mat-icon>
+                <span>Bloquear</span>
+              </button>
+            </mat-menu>    
+
           </td>
           
         </ng-container>
